--- a/assets/fonts/ProductSans-Regular/style.css
+++ b/assets/fonts/ProductSans-Regular/style.css
@@ -1,5 +1,5 @@
 @font-face {
    font-family: 'ProductSans-Regular';
    font-display: swap;
-   src: url('file:///C:/Users/Brendan/AppData/Local/Mobirise.com/Mobirise/projects/project-2020-05-12_144600/fonts/ProductSans-Regular/font.ttf');
+   src: url('file:///C:/Users/Brendan/Downloads/culverthemusical-master/culverthemusical-master/fonts/ProductSans-Regular/font.ttf');
 }
